css/style.css
/* ... */
.show {
    visibility: visible !important;
}

/*---------------------------------------------------------------*/
/*------------------------REUSABLE COMPONENT---------------------*/
/*---------------------------------------------------------------*/
.row {
    max-width: 1140px;
    margin: 0 auto;
}

.hidden {
    visibility: hidden;
}

.clear-fix {
    zoom: 1;
}

.clear-fix:after {
    content: '.';
    clear: both;
    display: block;
    height: 0;
    visibility: hidden;
}

/*----------------------------------------------------------------*/
/*------------------------HEADINGS--------------------------*/
/*----------------------------------------------------------------*/
.heading-1,
.heading-2,
.heading-3 {
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: 1px;
    text-align: center;
}

/*--------------------------------------------------------*/
/*------------------------HEADER--------------------------*/
/*--------------------------------------------------------*/

.heading-1 {
    margin-top: 0;
    margin-bottom: 20px;
    color: var(--white-color);
    font-size: 250%;
    word-spacing: 4px;
    animation-name: fadeInMOverFromRight;
    animation-duration: 2s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: backwards;
}

.hero-text-box {
    position: absolute;
    max-width: 1140px;
    top: 50%;
    left: 20%;
}

.header {
    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../images/website-images/hero.jpg");
    background-size: cover;
    background-position: center;
    height: 100vh;
    width: auto;

}

/*--------------------------------------------------------*/
/*------------------------BUTTONS--------------------------*/
/*--------------------------------------------------------*/

.btn:link,
.btn:visited {
    display: inline-block;
    padding: 10px 30px;
    font-weight: 300;
    text-decoration: none;
    transition: background-color 0.30s, border 0.3s, color 0.3s;
}

.btn-full:link,
.btn-full:visited {
    background-color: var(--base-color);
    color: var(--white-color);
    border-radius: 200px;
    border: 1px solid var(--base-color);
    margin-right: 15px;
    animation-name: fadeInMOverFromBottom;
    animation-duration: 2s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: backwards;
    animation-delay: 1s;
}

.btn-full:hover,
.btn-full:active {
    background-color: var(--base-color-dark);
    color: var(--white-color);
    border-color: var(--base-color-dark);
}

.btn-ghost:link,
.btn-ghost:visited {
    color: var(--white-color);
    border-radius: 200px;
    border: 1px solid var(--white-color);
    animation-name: fadeInMOverFromBottom;
    animation-duration: 2s;
    animation-timing-function: ease-in-out;
    animation-fill-mode: backwards;
    animation-delay: 1s;
}

.btn-ghost:hover,
.btn-ghost:active {
    border-color: var(--base-color-dark);
    background-color: var(--base-color-dark);
}

.btn-full:hover,
.btn-ghost:hover {
    transform: translateY(-3px);
    box-shadow: 2px 7px 10px 10px rgba(29, 5, 0, 0.7);
}

.btn-full:active,
.btn-ghost:active {
    transform: translateY(3px);
    box-shadow: 2px 5px 7px 7px rgba(29, 5, 0, 0.3);
}

/*--------------------------------------------------------*/
/*------------------------NAVBAR--------------------------*/
/*--------------------------------------------------------*/
.logo {
    height: 70px;
    width: auto;
    display: inline-block;
    vertical-align: middle;
}

.brand {
    text-decoration: none;
    color: var(--white-color);
    font-size: 200%;
    float: left;
    vertical-align: middle;
    display: inline-block;
    padding-top: 20px;
    /*animation-name: fadeIn;*/
    /*animation-duration: 0.5s;*/
    /*animation-timing-function: ease-in-out;*/
    /*animation-fill-mode: backwards;*/
    /*animation-delay: 0.5s;*/
}

.brand-name {
    font-weight: 300;
    display: inline-block;
    vertical-align: middle;
    margin-left: 10px;
}

/*--------------------------------------------------------*/
/*------------------------MENU--------------------------*/
/*--------------------------------------------------------*/
.menu {
    float: right;
    display: inline-block;
    margin-top: 40px;
    animation-name: fadeIn;
    /*animation-duration: 0.5s;*/
    /*animation-timing-function: ease-in-out;*/
    /*animation-fill-mode: backwards;*/
    /*animation-delay: 0.5s;*/
}

.menu li {
    list-style: none;
    display: inline-block;
    margin-left: 20px;
    padding-bottom: 5px;
}

.menu li a {
    text-decoration: none;
    color: var(--white-color);
}

.special-buttons {
    display: inline-flex;
    padding: 0px;
    margin: 0px;
    vertical-align: middle;
}

.btn-menu:link,
.btn-menu:visited,
.btn-book-table:link,
.btn-book-table:visited,
.btn-contact-us:link,
.btn-contact-us:visited,
.btn-about-us:link,
.btn-about-us:visited {
    border-bottom: 1px solid transparent;
}

.btn-menu:hover,
.btn-menu:active,
.btn-book-table:hover,
.btn-book-table:active,
.btn-contact-us:hover,
.btn-contact-us:active,
.btn-about-us:hover,
.btn-about-us:active {
    border-bottom: 1px solid var(--secondary-color);
    transition: border-bottom-color 0.5s;
}

.navbar {
    padding: 10px 10px 0px 10px;
}

.user-image {
    height: 50px;
    width: auto;
    padding-top: 10px;
}


.btn-sign-up:link,
.btn-sign-up:visited {
    background-color: var(--base-color);
    border-radius: 200px;
    transition: background-color 0.30s;
    padding: 5px 15px;
    font-weight: 400;
}

.btn-sign-up:active,
.btn-sign-up:hover {
    background-color: var(--base-color-dark);
    padding: 6px 17px;
    box-shadow: 0px 0px 10px 10px rgba(29, 5, 0, 0.4);
    transition: all 0.3s ease-in-out;
}

.btn-sign-up:active {
    color: var(--base-color-dark);
    background-color: var(--white-color);
    box-shadow: 0px 0px 10px 10px rgba(29, 5, 0, 0.3);
    transition: all 0.3s ease-in-out;
}

.btn-user {
    padding-bottom: 0px;
}
/* ... */

